# fetch-cpy-src

./: .flake8  .gitignore  .pylintrc  .readthedocs.yaml  README.md  mkdocs.yaml  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
docs/: adapter.md  api.md  index.md  manifest.md  module.md  requirements.txt
src/fetch_cpy_src/: __init__.py  adapter.py  cli.py  downloader.py  example-manifest.toml  manifest.py  phy.toml
src/phy_cpydeps_update/: _adapter.py  _downloader.py  adapter.py  cpy312.toml  manifest.py
tests/: _common.py  test_adapt.py  test_cli.py  test_dl.py  test_entrypoint.py
